--- a/LoginPage/Views/BestScoresPageView.xaml
+++ b/LoginPage/Views/BestScoresPageView.xaml
@@ -3,10 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="LoginPage.Views.BestScoresPageView"
              Title="BestScoresPageView">
+    <ScrollView Margin="10">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+    
     </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
